# rag-lab

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  INGESTION_REFACTORING_COMPLETE.md  ORCHESTRATION_FIX_SUMMARY.md  ORCHESTRATION_PIPELINE_FIX.md  POST_IMPLEMENTATION_FIXES.md  RAG_PIPELINE_REFACTORING_COMPLETE.md  README.md  pyproject.toml  test_rag_combinations.py  test_results.txt  test_results_optimized.txt
app/: main.py
app/api/v1/: documents.py  rag.py  results.py
app/core/: concurrency.py  config.py  dependencies.py  health.py
app/db/: database.py  models.py  repositories.py
app/models/: enums.py  schemas.py  scoring.py
app/rag/: limiter.py  rules.py  utils.py
app/rag/pipelines/: orchestration_pipeline.py  stages.py  standard_pipeline.py
app/rag/techniques/: __init__.py
app/rag/techniques/filtering/: __init__.py  base.py  compression.py  factory.py  reranking.py
app/rag/techniques/indexing/: __init__.py  base.py  factory.py  headers.py  parent.py  proposition.py  semantic.py  standard.py  utils.py
app/rag/techniques/orchestration/: __init__.py  adaptive.py  base.py  crag.py  factory.py  self_rag.py
app/rag/techniques/orchestration/models/: adaptive_models.py  (+2 more)
app/rag/techniques/query_expansion/: __init__.py  base.py  factory.py  hyde.py
app/rag/techniques/retrieval/: __init__.py  base.py  basic.py  factory.py  hybrid_retrieval.py
app/services/: bm25_manager.py  ingestion.py  rag_query_service.py  scoring.py  tracing.py  vectorstore.py  web_search.py
app/utils/: helpers.py
frontend/: README.md  index.html  package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChunkDisplay.tsx  ComparisonView.tsx  FileUpload.tsx  ModeSwitcher.tsx  QueryInput.tsx  ResultsDisplay.tsx  SingleView.tsx  TechniqueSelector.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useDocumentUpload.ts  useRAGConfiguration.ts  useRAGQuery.ts
frontend/src/services/: api.ts  types.ts
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_headers_indexing.py  test_parent_document_indexing.py  test_proposition_indexing.py  test_rag_query_combinations.py  test_semantic_indexing.py  test_standard_indexing.py
tests/unit/: __init__.py  test_headers_indexing_unit.py  test_parent_document_indexing_unit.py  test_proposition_indexing_unit.py  test_semantic_indexing_unit.py  test_standard_indexing_unit.py
tests/utils/: __init__.py  verification.py
