[project]
name = "rag-playground-backend"
version = "0.1.0"
description = "RAG Playground Backend - Local-first RAG experimentation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.14",
    "httpx>=0.25.0",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain-experimental",
    "langchain-ollama",
    "langchain-chroma",
    "langchain-text-splitters",
    "chromadb>=0.4.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "tavily-python>=0.3.0",
    "ddgs>=0.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.23.0",
    "pytest>=7.4.0",
    "reportlab>=4.4.7",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "standard: marks tests for standard strategy",
    "semantic: marks tests for semantic strategy",
    "headers: marks tests for headers strategy",
    "parent_document: marks tests for parent_document strategy",
    "proposition: marks tests for proposition strategy",
    "unit: marks unit tests (with mocks)",
    "integration: marks integration tests (live API)",
    "asyncio: marks tests as async (pytest-asyncio)",
]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
